Spotless' changes